# openrye

./: .gitignore  404.html  AI_USAGE_GUIDE.md  Cargo.toml  README.md  RUST_CURRICULUM.md  RUST_TEACHING_SUMMARY.md  TODO_MARKERS_GUIDE.md  index.html  install-template.sh  marketplace-registry.json  pyproject.toml
changelog/: index.html
community/: index.html
guide/: index.html
guide/commands/: index.html
guide/commands/add/: index.html
guide/commands/config/: index.html
guide/commands/fetch/: index.html
guide/commands/fmt/: index.html
guide/commands/init/: index.html
guide/commands/install/: index.html
guide/commands/lint/: index.html
guide/commands/list/: index.html
guide/commands/lock/: index.html
guide/commands/make-req/: index.html
guide/commands/pin/: index.html
guide/commands/publish/: index.html
guide/config/: index.html
guide/docker/: index.html
guide/faq/: index.html
guide/installation/: index.html
guide/publish/: index.html
guide/pyproject/: index.html
guide/rust/: index.html
guide/shims/: index.html
guide/sources/: index.html
guide/sync/: index.html
guide/toolchains/: index.html
guide/tools/: index.html
guide/uv/: index.html
guide/virtual/: index.html
guide/workspaces/: index.html
openrye/: Cargo.toml
openrye-devtools/: pyproject.toml
openrye-devtools/src/openrye_devtools/: find_downloads.py  find_uv_downloads.py
openrye/src/: main.rs
philosophy/: index.html
rye/: Cargo.toml
rye/src/: main.rs
search/: search_index.json
templates/fastapi-template/: fastapi-production.ryet  template.toml
(+54 files in other folders)
